--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.31",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://yehonatan604.github.io/BCard-Doc",
